# PyPortable

./: .gitignore  README.md  pyproject.toml  setup.py
pyportable/: config.py
pyportable_installer/: cli.py  config.py
